Update Lasso benchmark evaluation and author's information
Changes have been made to improve the evaluation of Lasso benchmarks in the 'dna.py' script, where a benchmark map has been added along with relevant functions. In addition, the author's information has been updated in the 'pyproject.toml' file in the LassoBenchmarks directory. These modifications aim to optimize benchmark evaluations and correctly attribute the project authorship.

--- a/LassoBenchmarks/pyproject.toml
+++ b/LassoBenchmarks/pyproject.toml
@@ -2,7 +2,7 @@
 name = "lassobenchmarks"
 version = "0.1.0"
 description = ""
-authors = ["Mona Lisa <leonard.papenmeier@posteo.de>"]
+authors = ["Leonard Papenmeier <leonard.papenmeier@gmail.com>"]
 readme = "README.md"
 packages = [
     { include = "lassobenchmarks", from = "." }
