Add Mopta08ServiceServicer class to new Mopta08 benchmark
This update creates a new benchmark for Mopta08, which includes introducing the Mopta08ServiceServicer class and related methods for evaluating performance. The benchmark service can work across different system architectures and evaluates performance based on a specific set of constraints defined in the Mopta08ServiceServicer class. It also creates a pyproject.toml for project environment and dependency definition.

--- a/LassoBenchmarks/pyproject.toml
+++ b/LassoBenchmarks/pyproject.toml
@@ -21,8 +21,7 @@ url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
 
 [tool.poetry.scripts]
-lasso-benchmarks = "lassobenchmarks.dna:serve"
-
+lasso-benchmarks = "lassobenchmarks.main:serve"
 
 [build-system]
 requires = ["poetry-core"]
