Rename benchmark scripts in pyproject.toml
This commit renames the scripts used to start the benchmark services in both Mopta08Benchmark and LassoBenchmarks. These scripts have been changed to "start-benchmark-service" for more clarity on their function. These adjustments allow for more straightforward and predictable initiation of the benchmark services.

--- a/LassoBenchmarks/pyproject.toml
+++ b/LassoBenchmarks/pyproject.toml
@@ -21,7 +21,7 @@ url = "https://download.pytorch.org/whl/cpu"
 priority = "explicit"
 
 [tool.poetry.scripts]
-lasso-benchmarks = "lassobenchmarks.main:serve"
+start-benchmark-service = "lassobenchmarks.main:serve"
 
 [build-system]
 requires = ["poetry-core"]
