--- a/MaxSATBenchmarks/pyproject.toml
+++ b/MaxSATBenchmarks/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 python = "^3.11"
 bencherscaffold = { git = "https://LeoIV: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@github.com/LeoIV/BencherScaffold.git", branch = "master" }
 numpy = "^1.26.4"
+requests = "^2.31.0"
 
 [tool.poetry.scripts]
 start-benchmark-service = "maxsatbenchmarks.main:serve"
