--- a/EboBenchmarks/pyproject.toml
+++ b/EboBenchmarks/pyproject.toml
@@ -12,6 +12,7 @@ packages = [
 python = "~3.8"
 ebo = { git = "https://github.com/LeoIV/Ensemble-Bayesian-Optimization.git" }
 bencherscaffold = { git = "https://LeoIV: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@github.com/LeoIV/BencherScaffold.git", branch = "master" }
+numpy = "^1.20.1"
 
 [tool.poetry.scripts]
 start-benchmark-service = "ebobenchmarks.main:serve"
