--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -9,7 +9,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        path: bencher
+        with:
+          path: bencher
 
       - name: Build Docker image
         run: |
