Update repository in docker workflow
Switched the repository in the docker_build.yml workflow from 'bencherclient' to 'LeoIV/bencherclient'. Ensuring the workflow correctly checks out from the updated repository path.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Checkout bencherclient code
         uses: actions/checkout@v4
         with:
-          repository: 'bencherclient'
+          repository: 'LeoIV/bencherclient'
           ref: 'master'
           token: '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'
           path: bencherclient
