Update poetry install command in GitHub workflow
Modified the 'Install dependencies' step in the GitHub workflow to include dev dependencies during poetry installation. This adjustment ensures that all necessary development dependencies are accounted for during the continuous integration and delivery process.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd bencherclient
-          poetry install
+          poetry install --with dev
 
       - name: Run bencherclient
         run: |
