--- a/SVMBenchmarks/pyproject.toml
+++ b/SVMBenchmarks/pyproject.toml
@@ -1,23 +1,22 @@
 [tool.poetry]
-name = "mujocobenchmarks"
+name = "svmbenchmarks"
 version = "0.1.0"
 description = ""
 authors = ["Leonard Papenmeier <leonard.papenmeier@gmail.com>"]
 readme = "README.md"
 packages = [
-    { include = "mujocobenchmarks", from = "." }
+    { include = "svmbenchmarks", from = "." },
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.11"
 bencherscaffold = { git = "https://LeoIV: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@github.com/LeoIV/BencherScaffold.git", branch = "master" }
-mujoco-py = { git = "https://github.com/LeoIV/mujoco-py.git" }
-mujoco = "2.2.2"
-gym = "~0.24"
-numpy = "^1.20.1"
+numpy = "^1.26.4"
+requests = "^2.31.0"
+scikit-learn = "^1.4.0"
 
 [tool.poetry.scripts]
-start-benchmark-service = "mujocobenchmarks.main:serve"
+start-benchmark-service = "svmbenchmarks.main:serve"
 
 [build-system]
 requires = ["poetry-core"]
