--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -4,7 +4,7 @@ on: [ push ]
 
 jobs:
   build:
-    runs-on: python:3.11
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
@@ -22,7 +22,11 @@ jobs:
           docker run -d -p 50051:50051 bencher
 
       - name: Checkout bencherclient code
-        uses: actions/checkout@v4
+        uses: |
+          actions/checkout@v4
+          actions/setup-python@v5
+          with:
+            python-version: '3.10'
         with:
           repository: 'LeoIV/bencherclient'
           ref: 'master'
