--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           repository: 'LeoIV/bencherclient'
           ref: 'master'
-          token: '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'
+          token: ${{ secrets.BENCHERCLIENT_PAT }}
           path: bencherclient
 
       - name: Checkout python 3.11
@@ -46,4 +46,10 @@ jobs:
         run: |
           cd bencherclient
           poetry run python -m bencherclient -b robotpushing -p 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+
+      - name: Push to dockerhub
+        run: |
+          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
+          docker tag bencher ${{ secrets.DOCKERHUB_USERNAME }}/bencher
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/bencher
 
