Modify BencherBenchmarks workflow and Docker setup
The commit modifies the Docker build workflow of BencherBenchmarks by changing the poetry install command and script run. Specifically, it avoids installing dev packages and removes the root project. It also changes the python version and the run command invoked.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -40,12 +40,12 @@ jobs:
       - name: Install dependencies
         run: |
           cd bencherclient
-          poetry install --with dev
+          poetry install --without dev --no-root
 
       - name: Run bencherclient
         run: |
           cd bencherclient
-          poetry run python -m bencherclient -b robotpushing -p 1 1 1 1 1 1 1 1 1 1 1 1 1 1
+          poetry run python3 run_all_benchmarks.py
 
       - name: Push to dockerhub
         run: |
