--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -2,6 +2,10 @@ name: Docker Build
 
 on: [ push ]
 
+env:
+  TEST_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/bencher:test
+  LATEST_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/bencher:latest
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -12,14 +16,31 @@ jobs:
         with:
           path: bencher
 
-      - name: Build Docker image
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and export to Docker
+        uses: docker/build-push-action@v5
+        with:
+          context: bencher
+          load: true
+          tags: ${{ env.TEST_TAG }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      - name: Run Docker container
         run: |
           cd bencher
-          docker build -t bencher .
-
-      - name: Run Docker container in background
-        run: |
-          docker run -d -p 50051:50051 bencher
+          docker run -d -p 50051:50051 --rm ${{ env.TEST_TAG }}
 
       - name: Checkout bencherclient code
         uses: actions/checkout@v4
@@ -47,9 +68,13 @@ jobs:
           cd bencherclient
           poetry run python3 run_all_benchmarks.py
 
-      - name: Push to dockerhub
-        run: |
-          echo ${{ secrets.DOCKERHUB_TOKEN }} | docker login -u ${{ secrets.DOCKERHUB_USERNAME }} --password-stdin
-          docker tag bencher ${{ secrets.DOCKERHUB_USERNAME }}/bencher
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/bencher
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: bencher
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: ${{ env.LATEST_TAG }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
