Update poetry installation step in Github workflow
The poetry installation step in Github workflow for BencherBenchmarks was updated. Previously, it excluded the dev dependencies during the installation. The code has been changed to include the dev dependencies in the installation process.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -61,7 +61,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd bencherclient
-          poetry install --without dev --no-root
+          poetry install --with dev --no-root
 
       - name: Run bencherclient
         run: |
