--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -28,6 +28,28 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: pip cache for docker
+        uses: actions/cache@v3
+        with:
+          path: pip-build-cache
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+
+      - name: poetry cache for docker
+        uses: actions/cache@v3
+        with:
+          path: poetry-build-cache
+          key: ${{ runner.os }}-poetry-${{ hashFiles('**/pyproject.toml') }}
+
+      - name: inject poetry cache
+        uses: reproducible-containers/buildkit-cache-dance@v2.1.2
+        with:
+          cache-source: poetry-build-cache
+
+      - name: inject pip cache
+        uses: reproducible-containers/buildkit-cache-dance@v2.1.2
+        with:
+          cache-source: pip-build-cache
+
       - name: Build and export to Docker
         uses: docker/build-push-action@v5
         with:
@@ -36,6 +58,8 @@ jobs:
           tags: ${{ env.TEST_TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            GITHUB_SHA=${{ github.sha }}
 
       - name: Run Docker container
         run: |
@@ -54,6 +78,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+          cache: 'pip'
 
       - name: Install Poetry
         uses: snok/install-poetry@v1
@@ -77,4 +102,6 @@ jobs:
           tags: ${{ env.LATEST_TAG }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          build-args: |
+            GITHUB_SHA=${{ github.sha }}
 
