Update Dockerfile formatting and caching in workflow
The Dockerfile has been adjusted to correct the formatting in the "RUN" directive. The GitHub Actions workflow file, docker_build.yml, has also been updated to better handle pip and poetry cache during Docker build steps. These changes streamline and improve the reliability

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -44,11 +44,13 @@ jobs:
         uses: reproducible-containers/buildkit-cache-dance@v2.1.2
         with:
           cache-source: poetry-build-cache
+          cache-target: /root/.cache/pypoetry
 
       - name: inject pip cache
         uses: reproducible-containers/buildkit-cache-dance@v2.1.2
         with:
           cache-source: pip-build-cache
+          cache-target: /root/.cache/pip
 
       - name: Build and export to Docker
         uses: docker/build-push-action@v5
