Update singularity build command in GitHub Actions workflow
The singularity build command in the GitHub Actions workflow file for BencherBenchmarks was updated. Now instead of using "singularity_container", the command refers to "container.sdef". This

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -115,7 +115,7 @@ jobs:
           singularity-version: 3.8.3
       - name: build singularity container
         run: |
-          singularity build --sandbox --fakeroot bencher.sif singularity_container
+          singularity build --sandbox --fakeroot bencher.sif container.sdef
           if [ $? -ne 0 ]; then
             echo "Singularity build failed."
             exit 1
