--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -1,6 +1,11 @@
 name: Docker Build
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - master
+  schedule:
+    - cron: '0 0 * * 1-5'
 
 env:
   TEST_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/bencher:test
@@ -114,6 +119,9 @@ jobs:
         with:
           singularity-version: 3.8.3
       - name: build singularity container
+        env:
+          SINGULARITYENV_SINGULARITY_DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          SINGULARITYENV_SINGULARITY_DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
           singularity build --sandbox --fakeroot bencher.sif container.sdef
           if [ $? -ne 0 ]; then
