--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -120,7 +120,7 @@ jobs:
           singularity-version: 3.8.3
       - name: build singularity container
         run: |
-          singularity build --sandbox --fakeroot --build-arg "SINGULARITY_DOCKER_USERNAME=${{ secrets.DOCKERHUB_USERNAME }},SINGULARITY_DOCKER_PASSWORD=${{ secrets.DOCKERHUB_TOKEN }}" bencher.sif container.sdef
+          SINGULARITYENV_SINGULARITY_DOCKER_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} SINGULARITYENV_SINGULARITY_DOCKER_PASSWORD=${{ secrets.DOCKERHUB_TOKEN }} singularity build --sandbox --fakeroot bencher.sif container.sdef
           if [ $? -ne 0 ]; then
             echo "Singularity build failed."
             exit 1
