Set Docker credentials as environment variables
The Docker username and password in the BencherBenchmarks' Docker build workflow are now set as environment variables directly in the 'build singularity container' action. This change not only increases security but also simplifies the command run for singularity build.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -119,8 +119,11 @@ jobs:
         with:
           singularity-version: 3.8.3
       - name: build singularity container
+        env:
+          SINGULARITY_DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          SINGULARITY_DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
         run: |
-          SINGULARITY_DOCKER_USERNAME=${{ secrets.DOCKERHUB_USERNAME }} SINGULARITY_DOCKER_PASSWORD=${{ secrets.DOCKERHUB_TOKEN }} singularity build --sandbox --fakeroot bencher.sif container.sdef
+          singularity build --sandbox --fakeroot bencher.sif container.sdef
           if [ $? -ne 0 ]; then
             echo "Singularity build failed."
             exit 1
