Refactor starting script and run python commands in apptainer
Refactored the starting script in the 'container.sdef' file to remove redundant echo commands and add sleep commands for better performance. The python version command has also been updated in the 'docker_build.yml' file to use apptainer instead of singularity for better compatibility and usage.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -134,4 +134,4 @@ jobs:
           apptainer instance start bencher.sif bencher
       - name: run bencherclient
         run: |
-          apptainer run instance://bencher python3 /opt/bencherclient/run_all_benchmarks.py
+          apptainer run instance://bencher python /opt/bencherclient/run_all_benchmarks.py
