--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -134,4 +134,5 @@ jobs:
           apptainer instance start bencher.sif bencher
       - name: run bencherclient
         run: |
+          sleep 5
           apptainer run instance://bencher python /opt/bencherclient/run_all_benchmarks.py
