Enable Docker build in GitHub workflow and optimize command order
Uncommented the line that makes the 'build-test-singularity' job depend on 'build-test-docker' to enable the Docker build in the GitHub workflow. The 'sleep' command in the 'run bencherclient' run block has also been removed to optimize the sequence of command execution, allowing services in the docker container to initialize properly before the benchmarks are run.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -110,7 +110,7 @@ jobs:
 
   build-test-singularity:
     runs-on: ubuntu-20.04
-    #needs: build-test-docker
+    needs: build-test-docker
     steps:
       - uses: actions/checkout@v4
         with:
@@ -134,5 +134,4 @@ jobs:
           apptainer instance start bencher.sif bencher
       - name: run bencherclient
         run: |
-          sleep 10
           apptainer run instance://bencher python /opt/bencherclient/run_all_benchmarks.py
