Add condition to build and push Docker image only if not scheduled.

--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -99,6 +99,7 @@ jobs:
 
       - name: Build and push
         uses: docker/build-push-action@v5
+        if: ${{ github.event_name != 'schedule' }}
         with:
           context: bencher
           push: true
