--- a/.github/workflows/update_scaffold_version.yml
+++ b/.github/workflows/update_scaffold_version.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Lock all subprojects
         run: |
-          for dir in *; do \
+          for dir in bencher/*; do \
             echo "Processing $dir" && \
             if [ -d "$dir" ]; then \
               if [ -f "$dir/.python-version" ]; then \
