--- a/.github/workflows/update_scaffold_version.yml
+++ b/.github/workflows/update_scaffold_version.yml
@@ -33,13 +33,15 @@ jobs:
           for dir in bencher/*; do \
             echo "Processing $dir" && \
             if [ -d "$dir" ]; then \
-              if [ -f "$dir/.python-version" ]; then \
+              #if [ -f "$dir/.python-version" ]; then \
                 cd $dir && \
                 pyenv install $(cat .python-version) || echo "pyenv already installed version $(cat .python-version)" && \
-                PATH="$PYENV_ROOT/shims:$PATH" poetry env use $(cat .python-version); \
+                PATH="$PYENV_ROOT/shims:$PATH" poetry env use $(cat .python-version); && \
+                cd ..; \
               fi; \
               cd $dir && \
               poetry update bencherscaffold -v && \
+              cd ..; \
               if [ -f "$dir/.python-version" ]; then \
                 poetry env use system; \
               fi; \
