--- a/.github/workflows/update_scaffold_version.yml
+++ b/.github/workflows/update_scaffold_version.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           for dir in bencher/*; do \
             echo "Processing $dir" && \
+            echo "Current working directory: $(pwd)" && \
             if [ -d "$dir" ]; then \
               if [ -f "$dir/.python-version" ]; then \
                 cd $dir && \
@@ -45,6 +46,7 @@ jobs:
                 poetry env use system; \
               fi; \
             fi; \
+            echo "(After) Current working directory: $(pwd)" && \
           done
 
       - name: Commit if changes
