--- a/.github/workflows/update_scaffold_version.yml
+++ b/.github/workflows/update_scaffold_version.yml
@@ -1,9 +1,9 @@
 name: Update scaffold
 
 on:
-  push:
-    branches:
-      - master
+  on:
+    repository_dispatch:
+      types: [ update_scaffold ]
 
 jobs:
   update-scaffold-version:
