--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -6,6 +6,10 @@ on:
       - master
   schedule:
     - cron: '0 0 * * 1-5'
+  workflow_run:
+    workflows: ["Update scaffold"]
+    types:
+      - completed
 
 env:
   TEST_TAG: ${{ secrets.DOCKERHUB_USERNAME }}/bencher:test
