--- a/BencherServer/pyproject.toml
+++ b/BencherServer/pyproject.toml
@@ -12,7 +12,7 @@ packages = [
 python = "^3.11"
 grpcio = "^1.60.1"
 protobuf = "^4.25.2"
-bencherscaffold = { git = "https://LeoIV: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@github.com/LeoIV/BencherScaffold.git", branch = "master" }
+bencherscaffold = "^0.1.0"
 
 [tool.poetry.scripts]
 start-benchmark-service = "bencherserver.main:serve"
