--- a/NoDependencyBenchmark/pyproject.toml
+++ b/NoDependencyBenchmark/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "mopta08benchmark"
+name = "nodependencybenchmark"
 version = "0.1.0"
 description = ""
 authors = ["Leonard Papenmeier <leonard.papenmeier@gmail.com>"]
 readme = "README.md"
 packages = [
-    { include = "mopta08benchmark", from = "." }
+    { include = "nodependencybenchmark", from = "." }
 ]
 
 [tool.poetry.dependencies]
@@ -15,7 +15,7 @@ numpy = "^1.26.4"
 requests = "^2.31.0"
 
 [tool.poetry.scripts]
-start-benchmark-service = "mopta08benchmark.main:serve"
+start-benchmark-service = "nodependencybenchmark.main:serve"
 
 [build-system]
 requires = ["poetry-core"]
