--- a/MujocoBenchmarks/pyproject.toml
+++ b/MujocoBenchmarks/pyproject.toml
@@ -15,6 +15,8 @@ mujoco-py = { git = "https://github.com/LeoIV/mujoco-py.git" }
 mujoco = "2.2.2"
 gym = "~0.24"
 numpy = "^1.20.1"
+box2d = "^2.3.10"
+box2d-py = "^2.3.8"
 
 [tool.poetry.scripts]
 start-benchmark-service = "mujocobenchmarks.main:serve"
