--- a/.github/workflows/update_scaffold_version.yml
+++ b/.github/workflows/update_scaffold_version.yml
@@ -13,6 +13,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: sudo apt-get install -y git curl g++ build-essential libssl-dev zlib1g-dev libbz2-dev libreadline-dev libsqlite3-dev curl llvm libncurses5-dev libncursesw5-dev xz-utils tk-dev libffi-dev liblzma-dev python3-openssl python3-dev
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
