add aftter update

--- a/.github/workflows/update_scaffold_version.yml
+++ b/.github/workflows/update_scaffold_version.yml
@@ -42,6 +42,7 @@ jobs:
               fi; \
               cd $dir && \
               poetry update --lock bencherscaffold -v && \
+              git add poetry.lock && \
               if [ -f "$dir/.python-version" ]; then \
                 poetry env use system; \
               fi; \
