--- a/.github/workflows/docker_build.yml
+++ b/.github/workflows/docker_build.yml
@@ -114,7 +114,7 @@ jobs:
             CACHEBUST=${{ github.sha }}
 
   build-test-singularity:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs: build-test-docker
     steps:
       - uses: actions/checkout@v4
