try fixing celer installation

--- a/LassoBenchmarks/pyproject.toml
+++ b/LassoBenchmarks/pyproject.toml
@@ -15,6 +15,7 @@ LassoBench = { git = "https://github.com/ksehic/LassoBench.git#egg=LassoBench" }
 gpy = "1.13.1"
 torch = { version = "^2.2.0", source = "torch" }
 setuptools = "^78.1.0"
+numpy = "1.23.5"
 
 [[tool.poetry.source]]
 name = "torch"
